update: tambah endpoint baru yaitu recruitment - getPhoto, getDocument
